<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:padding="30dp"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.AppCompat.Light"
    tools:context=".MainActivity">

    <TextView
        android:text="@string/movie_app"
        android:textColor="@color/purple"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:textSize="30sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/viewImage"
        android:layout_margin="10dp"
        android:layout_width="189dp"
        android:layout_height="160dp"
        android:src="@drawable/binar"
        app:civ_border_color="#FF000000"
        app:civ_border_width="2dp"
        android:layout_gravity="center"
        app:layout_constraintVertical_bias="0.157" />

    <TextView
        android:text="@string/login"
        android:textColor="@color/purple"
        android:layout_margin="20dp"
        android:layout_gravity="center"
        android:textSize="30sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/email"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/etPassLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/password"
        android:minHeight="48dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btnloginnew"
        android:textSize="16sp"
        android:textColor="@color/white"
        app:strokeColor="@color/purple"
        android:backgroundTint="@color/purple"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/txtRegist"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_gravity="center"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/registerinlogin"
        android:textColor="@color/purple"
        android:textSize="15sp"
        app:strokeColor="@color/purple"/>

    <Button
        android:id="@+id/btnChange"
        android:layout_gravity="center"
        android:text="@string/change_language"
        android:layout_margin="10dp"
        android:backgroundTint="@color/purple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>