<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:padding="40dp"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.AppCompat.Light"
    tools:context=".UpdateUser">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/viewImage"
        android:layout_margin="10dp"
        android:layout_width="189dp"
        android:layout_height="160dp"
        android:src="@drawable/binar"
        app:civ_border_color="#FF000000"
        app:civ_border_width="2dp"
        android:layout_gravity="center"
        app:layout_constraintVertical_bias="0.157" />

<!--    <ImageView-->
<!--        android:id="@+id/viewImage"-->
<!--        android:src="@drawable/ic_launcher_background"-->
<!--        android:layout_margin="10dp"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="256dp"/>-->

    <EditText
        android:id="@+id/etFullName"
        android:hint="@string/etfullname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/etUsername"
        android:hint="@string/etusername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />


    <Button
        android:id="@+id/btnChoosePhoto"
        android:backgroundTint="@color/purple"
        android:layout_margin="10dp"
        android:text="@string/choose_photo"
        android:layout_width="250dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/btnDelete"
        android:backgroundTint="@color/purple"
        android:layout_margin="10dp"
        android:text="@string/delete_photo"
        android:layout_width="250dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btnDone"
        android:backgroundTint="@color/purple"
        android:layout_margin="10dp"
        android:text="@string/done"
        android:layout_width="250dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"/>

</LinearLayout>