<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:padding="40dp"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.AppCompat.Light"
    tools:context=".ProfilActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imgProfil"
        android:layout_width="189dp"
        android:layout_height="160dp"
        android:src="@drawable/binar"
        app:civ_border_color="#FF000000"
        app:civ_border_width="2dp"
        android:layout_gravity="center"
        app:layout_constraintVertical_bias="0.157" />

    <TextView
        android:id="@+id/fullName"
        android:layout_marginTop="20dp"
        android:text="@string/fullname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/userName"
        android:layout_marginTop="20dp"
        android:text="@string/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btnUpdate"
        android:backgroundTint="#800080"
        android:layout_margin="10dp"
        android:text="@string/update"
        android:layout_width="250dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btnBackHome"
        android:backgroundTint="#800080"
        android:layout_margin="10dp"
        android:text="@string/back_to_home"
        android:layout_width="250dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"/>

</LinearLayout>