<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:padding="30dp"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.AppCompat.Light"
    tools:context=".MainActivity">

    <TextView
        android:text="@string/movie_app_regist"
        android:textColor="@color/purple"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:textSize="30sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/viewImage"
        android:layout_margin="10dp"
        android:layout_width="189dp"
        android:layout_height="160dp"
        android:src="@drawable/binar"
        app:civ_border_color="#FF000000"
        app:civ_border_width="2dp"
        android:layout_gravity="center"
        app:layout_constraintVertical_bias="0.157" />

    <TextView
        android:text="@string/register"
        android:textColor="@color/purple"
        android:layout_margin="20dp"
        android:layout_gravity="center"
        android:textSize="30sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/etEmailRegist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/email_regist"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/etPassRegist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/password_regist"
        android:minHeight="48dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRegist"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_gravity="center"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/btninregister"
        android:textColor="@color/purple"
        android:textSize="15sp"
        app:strokeColor="@color/purple"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.594"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/signInWithGoogle"
            android:layout_width="310dp"
            android:layout_height="48dp"
            android:background="@drawable/rectangle"
            android:gravity="center"
            android:text="@string/sign_in_with_google"
            android:textSize="18sp"
            app:layout_constraintVertical_bias="0.486"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="34dp"
            android:layout_height="29dp"
            android:layout_marginEnd="248dp"
            app:layout_constraintBottom_toBottomOf="@+id/signInWithGoogle"
            app:layout_constraintEnd_toEndOf="@+id/signInWithGoogle"
            app:layout_constraintTop_toTopOf="@+id/signInWithGoogle"
            app:layout_constraintVertical_bias="0.578"
            app:srcCompat="@drawable/google" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>